@@ -1,6 +1,8 @@
 Revision history for Clustericious-Config
 
 {{$NEXT}}
+  - rename Clustericious::Config::Plugin to ::Helpers
+  - create a deprecated module ::Plugin to keep Test::Clustericious::Cluster working
 
 0.24_05   2013-07-16 05:54:20 America/New_York
   - migrate to Dist::Zilla
